--- a/356F 2/app/src/main/res/layout/activity_transaction_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_transaction_page.xml
@@ -17,62 +17,127 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <TextView
+            android:text="Deposit/Withdraw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6"
+            android:textSize="28sp"
+            android:textColor="@color/common_plus_signin_btn_text_light_focused"
+            android:gravity="center"
+            android:layout_marginBottom="25dp" />
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <RadioButton
                 android:text="deposit"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/radDeposit"
-                android:layout_weight="1" />
+                android:id="@+id/rbtnDeposit"
+                android:layout_weight="1"
+                android:layout_marginStart="15dp" />
 
             <RadioButton
                 android:text="withdraw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/radWithdraw"
+                android:id="@+id/rbtnWithdraw"
                 android:layout_weight="1"
                 android:checked="false" />
         </LinearLayout>
 
-        <EditText
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/account"
-            android:singleLine="true"
-            android:hint="account" />
+            android:layout_height="wrap_content">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/password"
-            android:singleLine="true"
-            android:hint="@string/prompt_password" />
+            <TextView
+                android:text="Enter amount:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10"
+                android:layout_weight="1"
+                android:textSize="18sp"
+                android:layout_marginStart="15dp" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/edtAmount"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
-            <Button
-                android:text="cancel"
-                android:layout_width="50dp"
+            <TextView
+                android:text="Credit Card:"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnCancel"
+                android:id="@+id/textView10"
+                android:textSize="18sp"
+                android:layout_marginStart="15dp" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/edtC_Card"
                 android:layout_weight="1" />
+        </LinearLayout>
+
+        <TextView
+            android:text="Current Amount: $1000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvAmount"
+            android:textSize="18sp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:text="Enter Security Code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView22"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/edtScode"
+            android:singleLine="true"
+            android:hint="Security Code"
+            android:layout_marginStart="15dp"
+            android:inputType="numberPassword" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="40dp">
 
             <Button
                 android:text="submit"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnSubmit"
+                android:layout_weight="1" />
+
+            <Button
+                android:text="cancel"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnCancel"
                 android:layout_weight="1" />
         </LinearLayout>
 
