--- a/356F 2/app/src/main/res/layout/fragment_frag_my_product.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_my_product.xml
@@ -5,9 +5,9 @@
     tools:context="com.example.bunnyfung.a356f.FragMyProduct">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="My Product" />
-
+        android:id="@+id/myPostList" />
 </FrameLayout>
