--- a/356F 2/app/src/main/res/layout/fragment_frag_new_post.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_new_post.xml
@@ -1,11 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.bunnyfung.a356f.FragNewPost">
 
     <RelativeLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_new_post_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -117,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="$100"
+            android:text="100"
             android:ems="10"
             android:id="@+id/tfPrice"
             android:paddingBottom="3dip"
@@ -247,6 +247,17 @@
             android:textSize = "14sp"
             android:layout_above="@+id/tvSize"
             android:layout_toEndOf="@+id/tvType" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:id="@+id/tvStatu"
+            android:layout_below="@+id/btnPostSubmit"
+            android:layout_alignParentStart="true"
+            android:text="test"
+            android:textAlignment="center"
+            android:fontFamily="sans-serif" />
     </RelativeLayout>
 
 
