--- a/356F 2/app/src/main/res/layout/post_list_item.xml
+++ b/356F 2/app/src/main/res/layout/post_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
     android:paddingBottom="5dp"
@@ -29,11 +29,11 @@
             <TextView
                 android:text="TextView"
                 android:layout_width="match_parent"
-                android:id="@+id/tvDec"
+                android:id="@+id/tvName"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:layout_height="48dp" />
+                android:layout_height="30dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -120,7 +120,7 @@
                     android:text="100000"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:id="@+id/textView45"
+                    android:id="@+id/tvPrice"
                     android:layout_weight="1"
                     android:gravity="left|center" />
 
