Transaction Page Layout fix

--- a/356F 2/app/src/main/res/layout/activity_transaction_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_transaction_page.xml
@@ -56,15 +56,14 @@
 
             <TextView
                 android:text="Enter amount:"
-                android:layout_width="wrap_content"
+                android:layout_width="121dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView10"
-                android:layout_weight="1"
                 android:textSize="18sp"
                 android:layout_marginStart="15dp" />
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
