--- a/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
@@ -11,56 +11,67 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.bunnyfung.a356f.ProfileEditPage">
 
+    <TextView
+        android:text="Profile Edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView12"
+        android:textStyle="normal|bold"
+        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:layout_marginBottom="40dp"
+        android:textSize="28sp" />
+
     <ImageButton
         android:layout_width="130dp"
-        android:layout_marginTop="15dp"
         android:id="@+id/ivIcon"
-        android:layout_marginStart="23dp"
         android:layout_height="130dp"
-        android:layout_below="@+id/btnLogout"
-        android:layout_alignParentStart="true"
         app:srcCompat="@mipmap/ic_launcher"
-        android:scaleType="fitCenter" />
-
-    <TextView
-        android:text="user ID :"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1"
-        android:layout_below="@+id/ivIcon"
-        android:layout_alignStart="@+id/ivIcon"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="34dp" />
+        android:scaleType="fitCenter"
+        android:layout_below="@+id/textView12"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:text="xxxxxxx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvUserid"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_toEndOf="@+id/textView1"
-        android:layout_marginStart="35dp" />
+        android:layout_marginLeft="60dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="46dp"
+        android:layout_below="@+id/ivIcon"
+        android:layout_toEndOf="@+id/textView1" />
 
     <EditText
-        android:inputType="number"
+        android:inputType="phone"
         android:ems="10"
         android:id="@+id/edtPhoneNum"
         android:layout_width="100dp"
         android:text="999"
         android:layout_height="40dp"
-        android:layout_below="@+id/tvUserid"
-        android:layout_toEndOf="@+id/ivIcon"
-        android:layout_marginTop="20dp" />
+        android:layout_marginLeft="60dp"
+        android:layout_alignBaseline="@+id/textview3"
+        android:layout_alignBottom="@+id/textview3"
+        android:layout_toEndOf="@+id/textview3"
+        android:layout_marginStart="35dp" />
+
+    <TextView
+        android:text="user ID :"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView1"
+        android:layout_alignBaseline="@+id/tvUserid"
+        android:layout_alignBottom="@+id/tvUserid"
+        android:layout_alignStart="@+id/ivIcon" />
 
     <TextView
         android:text="phone number :"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textview3"
-        android:layout_alignBaseline="@+id/edtPhoneNum"
-        android:layout_alignBottom="@+id/edtPhoneNum"
-        android:layout_alignStart="@+id/textView1" />
+        android:layout_below="@+id/textView1"
+        android:layout_toStartOf="@+id/tvUserid"
+        android:layout_marginTop="30dp" />
 
     <Button
         android:text="Submit"
@@ -68,9 +79,10 @@
         android:id="@+id/btnSubmit"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/edtPhoneNum"
+        android:layout_alignBaseline="@+id/btnCancel"
+        android:layout_alignBottom="@+id/btnCancel"
         android:layout_alignStart="@+id/textview3"
-        android:layout_marginTop="58dp" />
+        android:layout_marginStart="10dp" />
 
     <Button
         android:text="cancel"
@@ -78,9 +90,8 @@
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:id="@+id/btnCancel"
-        android:layout_marginStart="30dp"
-        android:layout_alignBaseline="@+id/btnSubmit"
-        android:layout_alignBottom="@+id/btnSubmit"
+        android:layout_marginBottom="85dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/edtPhoneNum" />
 
 </RelativeLayout>
