--- a/356F 2/app/src/main/res/layout/activity_security_code_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_security_code_page.xml
@@ -25,7 +25,8 @@
             android:textStyle="normal|bold"
             android:textAllCaps="true"
             android:textAlignment="center"
-            android:layout_marginBottom="40dp" />
+            android:layout_marginBottom="40dp"
+            android:textSize="28sp" />
 
         <EditText
             android:layout_width="match_parent"
