Product Edit Page Photo bug fixed

--- a/356F 2/app/src/main/res/layout/activity_product_detail_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_detail_page.xml
@@ -71,7 +71,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="90dp"
                         app:srcCompat="@android:drawable/ic_menu_gallery"
-                        android:id="@+id/ivPhoto3"
+                        android:id="@+id/ivSPhoto2"
                         android:layout_weight="1"
                         android:layout_gravity="left" />
 
