--- a/356F 2/app/src/main/res/layout/fragment_frag_new_post.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_new_post.xml
@@ -169,24 +169,6 @@
             android:layout_marginTop="160dp"
             android:layout_marginLeft="184dp" />
 
-        <Button
-            android:text="Submit"
-            android:textSize="13sp"
-            android:id="@+id/btnPostSubmit"
-            android:layout_below="@+id/tfDescription"
-            android:layout_alignEnd="@+id/cbSize"
-            android:layout_width="100dp"
-            android:layout_height="40dp" />
-
-        <Button
-            android:text="Cancel"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:textSize="13sp"
-            android:id="@+id/btnPostCancel"
-            android:layout_below="@+id/tfDescription"
-            android:layout_alignEnd="@+id/tfDescription" />
-
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -231,11 +213,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvStatu"
-            android:text="test"
             android:textAlignment="center"
             android:fontFamily="sans-serif"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_below="@+id/tfDescription"
+            android:layout_centerHorizontal="true">
+
+            <Button
+                android:text="Submit"
+                android:textSize="13sp"
+                android:id="@+id/btnPostSubmit"
+                android:layout_below="@+id/tfDescription"
+                android:layout_alignEnd="@+id/cbSize"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:text="Cancel"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textSize="13sp"
+                android:id="@+id/btnPostCancel"
+                android:layout_below="@+id/tfDescription"
+                android:layout_alignEnd="@+id/tfDescription"
+                android:layout_weight="1" />
+        </LinearLayout>
     </RelativeLayout>
 
 
