Home page (display)

--- a/356F 2/app/src/main/res/layout/fragment_frag_home.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_home.xml
@@ -5,9 +5,29 @@
     tools:context="com.example.bunnyfung.a356f.FragHome">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Home" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:text="search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnSearch" />
+        </LinearLayout>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/allProductList" />
+
+    </LinearLayout>
 
 </FrameLayout>
