--- a/356F 2/app/src/main/res/layout/activity_product_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_page.xml
@@ -21,7 +21,7 @@
             android:id="@+id/svSecondView"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_height="wrap_content">
+            android:layout_height="530dp">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -52,6 +52,30 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true" />
                 </RelativeLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="89dp"
+                    android:weightSum="2">
+
+                    <ImageView
+                        app:srcCompat="@android:drawable/ic_menu_gallery"
+                        android:id="@+id/ivSPhoto1"
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:layout_weight="1"
+                        android:layout_gravity="right" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        app:srcCompat="@android:drawable/ic_menu_gallery"
+                        android:id="@+id/ivSPhoto2"
+                        android:layout_weight="1"
+                        android:layout_gravity="left" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
