--- a/356F 2/app/src/main/res/layout/activity_product_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_page.xml
@@ -56,30 +56,6 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="89dp"
-                    android:weightSum="2">
-
-                    <ImageView
-                        app:srcCompat="@android:drawable/ic_menu_gallery"
-                        android:id="@+id/ivSPhoto1"
-                        android:layout_width="match_parent"
-                        android:layout_height="90dp"
-                        android:layout_weight="1"
-                        android:layout_gravity="right" />
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="90dp"
-                        app:srcCompat="@android:drawable/ic_menu_gallery"
-                        android:id="@+id/ivSPhoto2"
-                        android:layout_weight="1"
-                        android:layout_gravity="left" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
                     android:layout_height="65dp">
 
                     <TextView
@@ -268,7 +244,7 @@
                             android:text="BunnyFung"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/tvSellerName"
+                            android:id="@+id/tvOwnerName"
                             android:textColor="@android:color/black" />
 
                         <LinearLayout
@@ -287,7 +263,7 @@
                                 android:text="6053 2826"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/tvPhone"
+                                android:id="@+id/tvOwnerPhone"
                                 android:layout_weight="1"
                                 android:textColor="@android:color/background_dark" />
                         </LinearLayout>
@@ -308,7 +284,7 @@
                                 android:text="TextView"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/tvCred"
+                                android:id="@+id/tvOwnerCred"
                                 android:layout_weight="1"
                                 android:textColor="@android:color/background_dark" />
                         </LinearLayout>
