--- a/356F 2/app/src/main/res/layout/activity_make_offer_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_make_offer_page.xml
@@ -170,11 +170,34 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="Date Time:"
+                android:text="Price: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView17"
-                android:layout_weight="1" />
+                android:layout_weight="0.93" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/edtPrice"
+                android:layout_weight="1"
+                android:hint="Click to enter Price" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="Date Time:"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView17"
+                android:layout_weight="1.10"
+                android:layout_width="25dp" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -197,7 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView18"
-                android:layout_weight="1" />
+                android:layout_weight="0.65" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -205,7 +228,7 @@
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/edtPlace"
-                android:layout_weight="1"
+                android:layout_weight="0.80"
                 android:hint="Enter place" />
         </LinearLayout>
 
